--- a/views/home.erb
+++ b/views/home.erb
@@ -1,2 +1,6 @@
 <h1>THE DATA</h1>
-<%= @data.inspect %>
+
+<ul><% @data.each do |object| %>
+  <li><%= object['name'] %> <%= object['lat'] %> <%= object['lng'] %> </li>
+  <% end %>
+</ul>
