--- a/views/layout.erb
+++ b/views/layout.erb
@@ -12,6 +12,7 @@
 		<!-- Latest compiled and minified JavaScript -->
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 		<link href="css/styles.css" rel="stylesheet" type="text/css"/>
+		<link href='http://fonts.googleapis.com/css?family=Noto+Serif:400,400italic' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
 		<!--[if lte IE 8]>
     		<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
@@ -19,8 +20,11 @@
 		<script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	</head>
 	<body>
-		<div class="container-fluid">
-    		<%= yield %>
-    	</div>
+		<div class="container">
+			<div class="page-header">
+				<h1>Bike Mapper<small> an app that maps your bike route.</small></h1>
+			</div>
+			<%= yield %>
+		</div>
 	</body>
-</html>
+	</html>
