Connect the form to the map page.

--- a/views/form.erb
+++ b/views/form.erb
@@ -1,7 +1,7 @@
 <h3>Let's map your bike route:</h3>
 
 <br>
-<form action="/form" method="post" class="form-horizontal">
+<form action="/map" method="post" class="form-horizontal">
   <div class="form-group">
     <label name="starting">Start:</label>
     <select name="starting">
