--- a/views/map.erb
+++ b/views/map.erb
@@ -2,10 +2,22 @@
 <div id="map"></div>
 <script type="text/javascript" charset="utf-8">
   var map = L.map('map').setView([40.7142, -74.0064], 13);
-  L.tileLayer('http://tile.stamen.com/watercolor/{z}/{x}/{y}.png', {attribution: 'Stamen Toner'}, {
+  L.tileLayer('http://tile.stamen.com/watercolor/{z}/{x}/{y}.png', {attribution: 'Stamen Watercolor'}, {
     attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
     maxZoom: 18
   }).addTo(map);
 </script>
+
+<div id="start_stop">
+<p> You chose the following <em>starting</em> location: </p>
+<ul>
+  <li><%= @starting %></li>
+</ul>
+
+<p> You chose the following <em>ending</em> location: </p>
+<ul>
+  <li><%= @ending %></li>
+</ul>
+</div>
 
 <a href="/"><== Go Back</a>
