--- a/views/map.erb
+++ b/views/map.erb
@@ -1,23 +1,25 @@
-<h1>MAP!</h1>
-<div id="map"></div>
-<script type="text/javascript" charset="utf-8">
-  var map = L.map('map').setView([40.7142, -74.0064], 13);
-  L.tileLayer('http://tile.stamen.com/watercolor/{z}/{x}/{y}.png', {attribution: 'Stamen Watercolor'}, {
-    attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
-    maxZoom: 18
-  }).addTo(map);
-</script>
-
+<h1>MAP</h1>
 <div id="start_stop">
-<p> You chose the following <em>starting</em> location: </p>
-<ul>
-  <li><%= @starting %></li>
-</ul>
-
-<p> You chose the following <em>ending</em> location: </p>
-<ul>
-  <li><%= @ending %></li>
-</ul>
+  <p> You chose the following: </p>
+  <ul>
+    <li>Start Location: <%= @start %></li>
+    <li>End Location: <%= @end %></li>
+  </ul>
 </div>
 
-<a href="/"><== Go Back</a>
+<div id="map">
+  <script type="text/javascript" charset="utf-8">
+    var map = L.map('map').setView([40.7142, -74.0064], 11);
+    start = L.marker(<%= @start %>).bindPopup("I am the Start point.").addTo(map);
+    end = L.marker(<%= @end %>).bindPopup("I am the End point.").addTo(map);
+    L.tileLayer('http://tile.stamen.com/terrain/{z}/{x}/{y}.png', {attribution: 'Stamen Watercolor'}, {
+      attribution: 'Map data &copy; <a href="http://openstreetmap.org">OpenStreetMap</a> contributors, <a href="http://creativecommons.org/licenses/by-sa/2.0/">CC-BY-SA</a>, Imagery © <a href="http://cloudmade.com">CloudMade</a>',
+      maxZoom: 18
+    }).addTo(map);
+
+
+  </script>
+</div>
+
+
+<a href="/form"><== Go Back</a>
